# do_example

./: .gitignore  README.md  pyproject.toml  requirements.txt
hello_django/: settings.py
