[tool.poetry]
name = "do-example"
version = "0.1.0"
description = ""
authors = ["Luciano Martins <luciano.martins.developer@gmail.com>"]
readme = "README.md"
packages = [{include = "do_example"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
gunicorn = "^20.1.0"
requests = "^2.28.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
